--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,7 +32,7 @@ stages:
        vmImage: 'ubuntu-latest'
       container:
         image: fortifydocker/fortify-ci-tools:5.4.1-jdk-17
-        options: "--add-host=<<SSC_FQDN_NAME>>:x.x.x.x"
+        #options: "--add-host=<<SSC_FQDN_NAME>>:x.x.x.x"
         env:
           FCLI_DEFAULT_SC_SAST_CLIENT_AUTH_TOKEN: $(_FCLI_DEFAULT_SC_SAST_CLIENT_AUTH_TOKEN)
           FCLI_DEFAULT_SSC_USER: $(_FCLI_DEFAULT_SSC_USER)
@@ -44,7 +44,7 @@ stages:
       steps:
       - script: |
           echo Setting connection with Fortify Platform
-          echo $FORTIFY_SSC_IP fortify.cyberxdemo.com >> /etc/hosts
+          #echo $FORTIFY_SSC_IP fortify.cyberxdemo.com >> /etc/hosts
           #Use --insecure switch if the SSL certificate is self generated.
           fcli ssc session login
           fcli sc-sast session login
