--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -47,8 +47,12 @@ stages:
           #echo $FORTIFY_SSC_IP fortify.cyberxdemo.com >> /etc/hosts
           #Use --insecure switch if the SSL certificate is self generated.
           fcli ssc session login
-          fcli sc-sast session login
+          echo analisando login ssc
+          fcli ssc session list
           
+          fcli sc-sast session login --ssc-ci-token=$FCLI_DEFAULT_SSC_CI_TOKEN --client-auth-token=$FCLI_DEFAULT_SC_SAST_CLIENT_AUTH_TOKEN  --ssc-url=$FCLI_DEFAULT_SSC_URL
+          echo analisando login sc-sast
+          fcli ssc session list
           scancentral package -bt mvn -o package.zip
           fcli sc-sast scan start --publish-to=$SSC_APP_VERSION_ID --sensor-version=$SC_SAST_SENSOR_VERSION --package-file=package.zip --store=Id --log-file=scan.log
 
