--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -45,7 +45,7 @@ stages:
       steps:
       - script: |
           echo Setting connection with Fortify Platform
-          echo "Branch Name: $(branchName)"
+          echo "Branch Name: $branchName "
           #echo $FORTIFY_SSC_IP fortify.cyberxdemo.com >> /etc/hosts
           #Use --insecure switch if the SSL certificate is self generated.
           fcli ssc session login
