--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -52,4 +52,22 @@ stages:
           echo analisando login ssc
           fcli ssc session list
           
+          fcli sc-sast session login --ssc-ci-token=$FCLI_DEFAULT_SSC_CI_TOKEN --client-auth-token=$FCLI_DEFAULT_SC_SAST_CLIENT_AUTH_TOKEN  --ssc-url=$FCLI_DEFAULT_SSC_URL
+          echo analisando login sc-sast
+          fcli ssc session list
+          scancentral package -bt mvn -o package.zip
+          fcli sc-sast scan start --publish-to=$SSC_APP_VERSION_ID --sensor-version=$SC_SAST_SENSOR_VERSION --package-file=package.zip --store=Id --log-file=scan.log
+
+          echo analisando scan Id
+          fcli sc-sast scan wait-for ::Id:: --interval=30s
+          fcli ssc issue count --appversion=$SSC_APP_VERSION_ID
+
+          echo analisando log 
+          cat scan.log
+
+          echo Terminating connection with Fortify Platform
+          fcli sc-sast session logout
+          fcli ssc session logout  
+        displayName: Scan Central Scan
+        continueOnError: false
           
